# mainchain

./: .dockerignore  .env.dev-docker  .eslintcache  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .yarnrc.yml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Containerfile  LICENSE  Makefile.toml  README.md  debian.dev.Dockerfile  deny.toml  dev.Dockerfile  dev.docker-compose.yml  dev.localchain.Dockerfile  docker-compose.yml  eslint.config.ts  flake.nix  lerna.json  package-lock.json  package.json  prek.toml  release.Dockerfile  rust-toolchain.toml  rustfmt.toml  tsconfig-cjs.json  tsconfig.json  vitest.config.ts
bitcoin/: Cargo.toml
bitcoin/cli/: Cargo.toml
bitcoin/nodejs/: Cargo.toml  clean-wasm.js  package.json  tsconfig.json  tsup.config.ts  vite.config.ts
bitcoin/src/: client.rs  cosign_releaser.rs  cosign_script.rs  errors.rs  lib.rs  psbt_utils.rs  utxo_spend_filter.rs  utxo_unlocker.rs  xpriv.rs
client/: Cargo.toml  update.sh
client/examples/: argon_transfer.rs  blake2_benchmark.rs  submit_block_seal.rs  submit_notebook.rs  subscribe_to_finalized.rs
client/nodejs/: .gitignore  CHANGELOG.md  README.md  clean-build.js  genesis.json  metadata.json  package.json  runtime_version.json  tsconfig-types.json  tsconfig.json  tsconfig.test.json  tsup.config.ts  vitest.config.ts
client/src/: conversion.rs  lib.rs  signature_messages.rs  signer.rs  spec.rs  types.rs
end-to-end/: Cargo.toml
end-to-end/src/: bitcoin.rs  finality.rs  lib.rs  localchain_transfer.rs  notary.rs  sync.rs  vote_mining.rs
localchain/: .env  .gitignore  .npmignore  CHANGELOG.md  Cargo.toml  build.rs  cli.js  index.d.ts  index.js  jest.config.js  package.build.json  package.json  rustfmt.toml  tsconfig-cjs.json  tsconfig.json  vitest.config.ts
localchain/.cargo/: config.toml
localchain/__test__/: TestMainchain.ts  TestNotary.ts  channel.test.ts  channelHold.test.ts  escrow.test.ts  index.test.ts  integration.test.ts  signing.test.ts  testHelpers.ts  transfers.test.ts
localchain/apple/: .gitignore  .swiftformat  .swiftlint.yml  Localchain-Bridging-Header.h  build-binary.sh  create-bindings.sh
localchain/migrations/: 20240108162907_bootstrap.up.sql
localchain/scripts/: init_db.sh  migrate.sh
localchain/src/: accounts.rs  argon_file.rs  balance_change_builder.rs  balance_changes.rs  balance_sync.rs  balance_sync_tests.rs  cli.rs  constants.rs  data_domain.rs  domain.rs  embedded_keystore.rs  error.rs  keystore.rs  lib.rs  macros.rs  main.rs  mainchain_client.rs  mainchain_transfer.rs  notarization_builder.rs  notarization_tracker.rs  notary_client.rs  open_channel_holds.rs  open_channels.rs  open_escrows.rs  overview.rs  signer.rs  test_utils.rs  transactions.rs
localchain/uniffi-bindgen/: Cargo.toml
node/: Cargo.toml  build.rs
node/bitcoin_utxo_tracker/: Cargo.toml
node/consensus/: Cargo.toml
node/randomx/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  grandpa_hard_forks.rs  grandpa_set_id_patch.rs  grandpa_warp_sync.rs  harmonic_mean.rs  lib.rs  main.rs  pow.rs  rpc.rs  runtime_api.rs  service.rs
notary/: .env  Cargo.toml  TODO.md  build.rs
notary/.sqlx/: query-0151b6b8832dd39f4d4fbb8fe3bf3afd1d165c9384e1dec473bd551f5a6cf3cd.json  query-049110ef35cd998b704bab5384fac04af3a5908244f7b70a3f6a31f1a4f19279.json  query-0c4c95a2957340c0fd439011e247f532485b079aa4adb5ac689cee9f75b3e1cf.json  query-0ee956ecd1f4d7eb74d3d0a8d13ef31562dbd98d99e975f6fa06a0fec1a60e37.json  query-127932aa7a5ae94aad9f8589b02b837537e0d01d5e1f036bf28886e80355f39e.json  query-132ff0fe97713de71b4241274e0c9746455d9d03d73a7cbf5967b3854deac735.json  query-1376a81cdd158446b05fd2e9f6507726c69e713baa9a567e9aa007de2f94b9c1.json  query-14960bb39d10c6a75b180a408cf3e0a3b19086977c0de236895893f077335e28.json  query-14ba057efec19f5c50eb237c4ab31c5de15a2e1d562c9f2deb335d148ed1809b.json  query-1683bf220219f5aaad85c07949ae1772489a24715af5876ecbce2115720f2304.json  query-17c98b32b1669461e1c633274ab7a4bcb49c5986baa17f505fb146c0278c6dd8.json  query-17d3300d21b2260e202ff178937b0ffb097d986a2b2a83e5a54d9c7412d05452.json  query-17de5f6943d5709c29f272140b7115bef8a0635aff04035edc797130637e1bd8.json  query-186a7de8081c26e4cacb699fa923a8313187dd55f406800dd6f6a4c68f635918.json  query-20a680919f00a8d8234ea05fefa0d6bbddd3ff782f01b8dc02c1172f1b4f8dda.json  query-29960f1d8dfea182bc4d6abf9baeeea83ffc6ca5aa44c9cd5a4d1fa3f8880e97.json  query-34b534eca22b7953c328b518ab121f6d77548576fdbea8960f2cce3fb9979c0c.json  query-38f90257bc10ef4e1b75be5f7cfe2bf209cc605883c80e73eca7fd2ed29dfec1.json  query-3b7178942863dd84db4d93389647934638ac4bb2d9811960dd825c96e4466f1c.json  query-3c87ff4bd750f568aff3eb4c8f4c4a502195b5ba8cc3f3c6bd6a8873adf92bc8.json  query-3e7a359a49817739d0d7753941ad68c86ffcf85a22c2fa5429036670fac45353.json  query-42d10bf01e7e305a4b73df16f34979eba8b9ecb25a9b510ce8fc826c65cc5391.json  query-478ce84864519c9fbfe80b3952ca961b30329dca045dbf458cc36388a88c09e8.json  query-48fa06076d92d7dcc28e0643a7888db18f9a18cd235139f33fcbe0afe56af1f3.json  query-4b8fda16252fc134cbb744361fde0a7e73bd7e9094ee56dedf8164ca031492b3.json  query-4d05ea3357ae090956d1fa184d0b05151c3797a02a0ea5c71976363a6d1de773.json  query-51bb4e44f3bb1272a952f064abdf760e06922d8deef4d887c0898a90ddf8c092.json  query-536240f2e960aa0d9a20ff25b4aff3af92f393ce4906ea7aa9dd7d299357df5f.json  query-58a903db9f5a987115957e5e2cccdf59ff69f8e219eafebb4abbd2812adfcddb.json  query-5a488f8f8d2b13083ab06de15bbd70c357a8e08449170500f3e802d2dead8573.json  query-5a5d35f45259a6af6e9ba23a785e8a7701b63302a7177911109872b842bfed3a.json  query-5fd9c8f5c229fcee8550e340e522a70facb635d760f8e0af1eef26a541697819.json  query-6033fe9d02907fe272e6813b2bcab184339640d6f201eb51e10d36782fe00b8d.json  query-6886c3847ecebd357bb11e2a9cfb255e42ae8fa462b665851837a0fc4e8dc88f.json  query-68e9b2a4b0e3c22b159f827a4907cf459dd197d5b4b8897ba8c202288a0db113.json  query-7217a9723fa8c984ad3534f113e3033a95e14f1fe6a157ae585bf23a05ac54e4.json  (+44 more)
oracle/: Cargo.toml  build.rs  cpi_schedule.html  test-price-index.json
primitives/: Cargo.toml
runtime/: Cargo.toml  build.rs
testing/: Cargo.toml
(+1006 files in other folders)
