[workspace]
members = [
    "node",
    "node/consensus",
    "node/bitcoin_utxo_tracker",
    "node/randomx",
    "pallets/bitcoin_utxos",
    "pallets/block_rewards",
    "pallets/block_seal",
    "pallets/block_seal_spec",
    "pallets/domains",
    "pallets/bond",
    "pallets/chain_transfer",
    "pallets/mining_slot",
    "pallets/notaries",
    "pallets/notebook",
    "pallets/price_index",
    "pallets/ticks",
    "pallets/mint",
    "pallets/vaults",
    "client",
    "end-to-end",
    "localchain",
    "localchain/uniffi-bindgen",
    "primitives",
    "runtime",
    "notary",
    "notary/audit",
    "notary/apis",
    "testing",
    "testing/bitcoin",
    "oracle",
    "bitcoin",
    "bitcoin/cli",
    "bitcoin/cli/macros",
]
resolver = "2"


[workspace.package]
version = "0.0.15"
edition = "2021"
authors = ["Argon <https://github.com/argonprotocol>"]
description = "The Argon ecosystem is a stablecoin on top of bitcoin."
homepage = "https://argonprotocol.org"
license = "MIT-0"
rust-version = "1.79.0"
repository = "https://github.com/argonprotocol/mainchain"
documentation = "https://argonprotocol.org/docs"

[profile.release]
lto = true
opt-level = 3
panic = "unwind"

[profile.testnet]
inherits = "release"
lto = false
debug = 1               # debug symbols are useful for profilers
debug-assertions = true
overflow-checks = true

[profile.dev]
debug = 1
debug-assertions = true
incremental = false
codegen-units = 256
opt-level = 0
split-debuginfo = "unpacked"

# make sure dev builds with backtrace do not slow us down
[profile.dev.package.backtrace]
inherits = "release"

# COPIED FROM SUBSTRATE REPO
#
# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# If you see an error mentioning "profile package spec ... did not match any packages", it
# probably concerns this list.
#
# This list is ordered alphabetically.
[profile.dev.package]
blake2 = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-dalek = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hash-db = { opt-level = 3 }
hashbrown = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
libm = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
polkavm-linker = { opt-level = 3 }
primitive-types = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
substrate-bip39 = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
wasmi = { opt-level = 3 }
sqlx-macros = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }

[workspace.dependencies]
futures = { version = "0.3" }
futures-timer = "3.0.1"
parking_lot = { version = "0.12" }
async-trait = { version = "0.1" }
tokio = { version = "1.35", features = ["sync", "time", "rt"] }
schnellru = { version = "0.2" }
lru-cache = { version = "0.1.2" }
getrandom = { version = "0.2" }
rand = { version = "0.8.5" }
lazy_static = "1.4.0"
smallvec = { version = "1.13" }
hex = { version = "0.4" }
url = "2.5.0"
num_cpus = "1.16"
reqwest = { version = "0.12", features = ["json"] }
scraper = { version = "0.20" }

codec = { default-features = false, package = "parity-scale-codec", version = "3.6", features = ["derive", "max-encoded-len"] }
serde = { default-features = false, version = "1.0", features = ["derive"] }
serde_json = { default-features = false, version = "1.0", features = ["raw_value", "arbitrary_precision", "alloc"] }
scale-info = { default-features = false, version = "2.11", features = ["derive"] }

anyhow = { version = "1", default-features = false }
thiserror = { version = "1.0" }
snafu = { version = "0.8", default-features = false }

jsonrpsee = { version = "0.24.5", features = ["http-client", "ws-client", "macros", "client-ws-transport-tls"] }
tower = { version = "0.5" }

tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = { version = "0.4", default-features = false }
env_logger = "0.11"
humantime = { version = "2.1" }
color-backtrace = { version = "0.6" }

sqlx = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }

binary-merkle-tree = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }

frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
frame-support = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
frame-system = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
frame-system-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
frame-executive = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
frame-try-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
frame-support-procedural = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
frame-system-benchmarking = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }


sp-api = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
sp-application-crypto = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
sp-arithmetic = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
sp-block-builder = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
sp-core = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1", features = ["serde"] }
sp-consensus-grandpa = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
sp-crypto-hashing = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
sp-debug-derive = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
sp-genesis-builder = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
sp-inherents = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
sp-io = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
sc-keystore = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
sp-keystore = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
sp-keyring = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
sc-utils = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
sp-offchain = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
sp-session = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
sp-transaction-pool = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
sp-version = { features = ["serde"], default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
frame-metadata-hash-extension = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
pallet-authorship = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
pallet-grandpa = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
pallet-offences = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
pallet-multisig = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
pallet-proxy = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
pallet-session = { default-features = false, features = ["historical"], git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
pallet-sudo = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
pallet-tx-pause = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
pallet-utility = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
pallet-transaction-payment = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }

# node-side
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }


# test clients
fs2 = { version = "0.4" }
strip-ansi-escapes = { version = "0.2" }
current_platform = { version = "0.2" }

substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }

# node
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }

sc-block-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
sc-chain-spec = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
sc-client-db = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
sc-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
sc-consensus-grandpa-rpc = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
sc-network-types = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
sc-rpc = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
sc-rpc-spec-v2 = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
sc-rpc-api = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }

sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
sp-consensus = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
sp-statement-store = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
sp-tracing = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }

substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-1" }
impl-trait-for-tuples = "0.2.2"

rsntp = { version = "4.0" }

bitcoincore-rpc = { version = "0.19" }
bitcoin = { version = "0.32.0", default-features = false }
bip39 = { version = "2.0.0" }
miniscript = { version = "12.0.0", default-features = false }
hwi = { version = "0.10", default-features = false }
bitcoind = { version = "0.36", features = ["26_0"] }
age = { version = "0.10.0" }
k256 = { version = "0.13.3", default-features = false }
bip32 = { version = "0.5.1", default-features = false }
base58 = { version = "0.2.0", default-features = false }
base64 = { version = "0.22", default-features = false }
napi-derive = { version = "2.16" }
napi = { version = "2.16", features = ["napi9", "async", "error_anyhow"] }
napi-build = { version = "2.1" }
uniffi = { version = "0.28", features = ["tokio"] }
randomx-rs = { git = "https://github.com/argonprotocol/randomx-rs", branch = "main" }

clap = { version = "4.5", features = ["derive", "cargo", "env"] }
quote = { version = "1.0" }
inquire = { version = "0.7" }
rpassword = { version = "7.3" }
comfy-table = { version = "7.1" }
bech32 = { version = "0.11.0" }
array-bytes = { version = "6.1" }
directories = { version = "5.0" }
syn = { version = "2.0" }
proc-macro2 = { version = "1.0" }
ctrlc = { version = "3.4" }

bindgen = { version = "0.70" }
cmake = { version = "0.1" }

dotenv = { version = "0.15" }

# releases are using old versions of jsonrpsee
subxt = { git = "https://github.com/paritytech/subxt", rev = "72db833defd2664410d61f51408b26fc9314fc41" }

argon-testing = { path = "testing" }
argon-localchain = { path = "localchain" }
argon-client = { path = "client" }
argon-node-consensus = { path = "node/consensus" }
argon-bitcoin = { path = "bitcoin", default-features = false }
argon-bitcoin-utxo-tracker = { path = "node/bitcoin_utxo_tracker" }
argon-node = { path = "node" }
argon-node-runtime = { path = "runtime" }
argon-randomx = { path = "node/randomx" }
argon-notary = { path = "notary" }
argon-notary-apis = { path = "notary/apis" }
argon-notary-audit = { path = "notary/audit", default-features = false }
argon-primitives = { path = "primitives", default-features = false }
argon-bitcoin-cli-macros = { path = "bitcoin/cli/macros" }

pallet-block-seal = { path = "pallets/block_seal", default-features = false }
pallet-block-seal-spec = { path = "pallets/block_seal_spec", default-features = false }
pallet-bitcoin-utxos = { path = "pallets/bitcoin_utxos", default-features = false }
pallet-block-rewards = { path = "pallets/block_rewards", default-features = false }
pallet-bond = { path = "pallets/bond", default-features = false }
pallet-chain-transfer = { path = "pallets/chain_transfer", default-features = false }
pallet-domains = { path = "pallets/domains", default-features = false }
pallet-mining-slot = { path = "pallets/mining_slot", default-features = false }
pallet-notebook = { path = "pallets/notebook", default-features = false }
pallet-notaries = { path = "pallets/notaries", default-features = false }
pallet-ticks = { path = "pallets/ticks", default-features = false }
pallet-mint = { path = "pallets/mint", default-features = false }
pallet-price-index = { path = "pallets/price_index", default-features = false }
pallet-vaults = { path = "pallets/vaults", default-features = false }
