[workspace]
members = [
    "node",
    "node/consensus",
    "node/bitcoin_utxo_tracker",
    "node/randomx",
    "pallets/bitcoin_utxos",
    "pallets/block_rewards",
    "pallets/block_seal",
    "pallets/block_seal_spec",
    "pallets/domains",
    "pallets/digests",
    "pallets/bond",
    "pallets/chain_transfer",
    "pallets/mining_slot",
    "pallets/notaries",
    "pallets/notebook",
    "pallets/price_index",
    "pallets/ticks",
    "pallets/mint",
    "pallets/vaults",
    "client",
    "end-to-end",
    "localchain",
    "localchain/uniffi-bindgen",
    "primitives",
    "runtime/argon",
    "runtime/canary",
    "notary",
    "notary/audit",
    "notary/apis",
    "testing",
    "testing/bitcoin",
    "oracle",
    "bitcoin",
    "bitcoin/cli",
    "bitcoin/cli/macros",
]
resolver = "2"


[workspace.package]
version = "1.0.1"
edition = "2021"
authors = ["Argon <https://github.com/argonprotocol>"]
description = "The Argon ecosystem is a stablecoin on top of bitcoin."
homepage = "https://argonprotocol.org"
license = "MIT-0"
rust-version = "1.79.0"
repository = "https://github.com/argonprotocol/mainchain"
documentation = "https://argonprotocol.org/docs"

[profile.release]
lto = true
opt-level = 3
panic = "unwind"

[profile.testnet]
inherits = "release"
lto = false
debug = 1               # debug symbols are useful for profilers
debug-assertions = true
overflow-checks = true

[profile.dev]
debug = 1
debug-assertions = true
incremental = false
codegen-units = 256
opt-level = 0
split-debuginfo = "unpacked"

# make sure dev builds with backtrace do not slow us down
[profile.dev.package.backtrace]
inherits = "release"

# COPIED FROM SUBSTRATE REPO
#
# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# If you see an error mentioning "profile package spec ... did not match any packages", it
# probably concerns this list.
#
# This list is ordered alphabetically.
[profile.dev.package]
blake2 = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-dalek = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hash-db = { opt-level = 3 }
hashbrown = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
libm = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
polkavm-linker = { opt-level = 3 }
primitive-types = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
substrate-bip39 = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
wasmi = { opt-level = 3 }
sqlx-macros = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }

[patch.crates-io]
pallet-ismp = { git = "https://github.com/argonprotocol/hyperbridge" }
pallet-ismp-runtime-api = { git = "https://github.com/argonprotocol/hyperbridge" }
pallet-hyperbridge = { git = "https://github.com/argonprotocol/hyperbridge" }
pallet-ismp-rpc = { git = "https://github.com/argonprotocol/hyperbridge" }
ismp-grandpa = { git = "https://github.com/argonprotocol/hyperbridge" }
ismp = { git = "https://github.com/argonprotocol/hyperbridge" }
pallet-token-gateway = { git = "https://github.com/argonprotocol/hyperbridge" }
merkleized-metadata = { git = "https://github.com/bkchr/merkleized-metadata", rev = "18c9f872ce583f9aaf53a25717af6f3db7605871" }

[workspace.dependencies]
futures = { version = "0.3" }
futures-timer = "3.0.1"
parking_lot = { version = "0.12" }
async-trait = { version = "0.1" }
tokio = { version = "1.35", features = ["sync", "time", "rt"] }
schnellru = { version = "0.2" }
lru-cache = { version = "0.1.2" }
getrandom = { version = "0.2" }
rand = { version = "0.8.5" }
lazy_static = "1.4.0"
smallvec = { version = "1.13" }
hex = { version = "0.4" }
url = "2.5.0"
num_cpus = "1.16"
reqwest = { version = "0.12", features = ["json"], default-features = false }
scraper = { version = "0.21" }

codec = { default-features = false, package = "parity-scale-codec", version = "3.6", features = ["derive", "max-encoded-len"] }
serde = { default-features = false, version = "1.0", features = ["derive"] }
serde_json = { default-features = false, version = "1.0", features = ["raw_value", "arbitrary_precision", "alloc"] }
scale-info = { default-features = false, version = "2.11", features = ["derive"] }

anyhow = { version = "1", default-features = false }
thiserror = { version = "2.0.3", default-features = false }

jsonrpsee = { version = "0.24.5", features = ["http-client", "ws-client", "macros", "client-ws-transport-tls"] }
tower = { version = "0.4" }
tower-http = { version = "0.6" }
prometheus = { version = "0.13", default-features = false }
hyper = { version = "1", default-features = false }
hyper-util = { version = "0.1", default-features = false, features = [
    "server",
] }
http-body-util = { version = "0.1", default-features = false }
governor = { version = "0.8" }
rusoto_core = { version = "0.48" }
rusoto_s3 = { version = "0.48" }
rusoto_credential = { version = "0.48" }
axum = { version = "0.7" }

tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = { version = "0.4", default-features = false }
env_logger = "0.11"
humantime = { version = "2.1" }
color-backtrace = { version = "0.6" }
uuid = { version = "1.11.0" }

sqlx = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
binary-merkle-tree = { version = "15.0.1", default-features = false }

frame-benchmarking = { version = "38.0.0" }
frame-benchmarking-cli = { version = "43.0.0" }
frame-support = { version = "38.0.0", default-features = false }
frame-system = { version = "38.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "34.0.0", default-features = false }
frame-executive = { version = "38.0.0", default-features = false }
frame-try-runtime = { version = "0.44.0", default-features = false }
frame-support-procedural = { version = "30.0.4", default-features = false }
frame-system-benchmarking = { version = "38.0.0", default-features = false }

sp-api = { version = "34.0.0", default-features = false }
sp-application-crypto = { version = "38.0.0", default-features = false }
sp-arithmetic = { version = "26.0.0", default-features = false }
sp-block-builder = { version = "34.0.0", default-features = false }
sp-core = { version = "34.0.0", default-features = false, features = ["serde"] }
sp-consensus-grandpa = { version = "21.0.0", default-features = false }
sp-crypto-hashing = { version = "0.1.0", default-features = false }
sp-debug-derive = { version = "14.0.0", default-features = false }
sp-genesis-builder = { version = "0.15.1", default-features = false }
sp-inherents = { version = "34.0.0", default-features = false }
sp-io = { version = "38.0.0", default-features = false }
sc-keystore = { version = "33.0.0", default-features = false }
sp-keystore = { version = "0.40.0", default-features = false }
sp-keyring = { version = "39.0.0", default-features = false }
sp-runtime = { version = "39.0.2", default-features = false }
sc-utils = { version = "17.0.0", default-features = false }
sp-offchain = { version = "34.0.0", default-features = false }
sp-session = { version = "36.0.0", default-features = false }
sp-transaction-pool = { version = "34.0.0", default-features = false }
sp-version = { version = "37.0.0", features = ["serde"], default-features = false }
frame-metadata-hash-extension = { version = "0.6.0", default-features = false }
pallet-authorship = { version = "38.0.0", default-features = false }
pallet-balances = { version = "39.0.0", default-features = false }
pallet-grandpa = { version = "38.0.0", default-features = false }
pallet-offences = { version = "37.0.0", default-features = false }
pallet-multisig = { version = "38.0.0", default-features = false }
pallet-proxy = { version = "38.0.0", default-features = false }
pallet-sudo = { version = "38.0.0", default-features = false }
pallet-tx-pause = { version = "19.0.0", default-features = false }
pallet-timestamp = { version = "37.0.0", default-features = false }
pallet-utility = { version = "38.0.0", default-features = false }
pallet-transaction-payment = { version = "38.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "38.0.0", default-features = false }

substrate-wasm-builder = { version = "24.0.1" }
# node-side
pallet-transaction-payment-rpc = { version = "41.0.0" }


# test clients
fs2 = { version = "0.4" }
strip-ansi-escapes = { version = "0.2" }
current_platform = { version = "0.2" }
regex = { version = "1.11.1" }
serial_test = { version = "3.2.0" }

# node
prometheus-endpoint = { version = "0.17.0", package = "substrate-prometheus-endpoint" }
sc-block-builder = { version = "0.42.0" }
sc-cli = { version = "0.47.0" }
sc-chain-spec = { version = "38.0.0" }
sc-client-api = { version = "37.0.0" }
sc-client-db = { version = "0.44.1" }
sc-consensus = { version = "0.44.0" }
sc-consensus-grandpa = { version = "0.30.0" }
sc-consensus-grandpa-rpc = { version = "0.30.0" }
sc-executor = { version = "0.40.1" }
sc-basic-authorship = { version = "0.45.0" }
sc-network = { version = "0.45.1" }
sc-network-types = { version = "0.12.1" }
sc-offchain = { version = "40.0.0" }
sc-rpc = { version = "40.0.0" }
sc-rpc-spec-v2 = { version = "0.45.0" }
sc-rpc-api = { version = "0.44.0" }
sc-service = { version = "0.46.0" }
sc-tracing = { version = "37.0.1" }
sc-transaction-pool = { version = "37.0.0" }
sc-transaction-pool-api = { version = "37.0.0" }
sc-telemetry = { version = "25.0.0 " }

sp-blockchain = { version = "37.0.1" }
sp-consensus = { version = "0.40.0" }
sp-statement-store = { version = "18.0.0" }
sp-timestamp = { version = "34.0.0" }
sp-tracing = { version = "17.0.1" }

substrate-frame-rpc-system = { version = "39.0.0" }
substrate-build-script-utils = { version = "11.0.0" }
impl-trait-for-tuples = "0.2.2"

rsntp = { version = "4.0" }

bitcoincore-rpc = { version = "0.19" }
bitcoin = { version = "0.32.0", default-features = false }
bip39 = { version = "2.0.0" }
miniscript = { version = "12.0.0", default-features = false }
hwi = { version = "0.10", default-features = false }
bitcoind = { version = "0.36", features = ["26_0"] }
age = { version = "0.10.0" }
k256 = { version = "0.13.3", default-features = false }
bip32 = { version = "0.5.1", default-features = false }
base58 = { version = "0.2.0", default-features = false }
base64 = { version = "0.22", default-features = false }
md-5 = { version = "0.10" }
napi-derive = { version = "2.16" }
napi = { version = "2.16", features = ["napi9", "async", "error_anyhow"] }
napi-build = { version = "2.1" }
uniffi = { version = "0.28", features = ["tokio"] }
randomx-rs = { git = "https://github.com/argonprotocol/randomx-rs", branch = "main" }

clap = { version = "4.5", features = ["derive", "cargo", "env"] }
quote = { version = "1.0" }
inquire = { version = "0.7" }
rpassword = { version = "7.3" }
comfy-table = { version = "7.1" }
bech32 = { version = "0.11.0" }
array-bytes = { version = "6.1" }
directories = { version = "5.0" }
syn = { version = "2.0" }
proc-macro2 = { version = "1.0" }
ctrlc = { version = "3.4" }

bindgen = { version = "0.70" }
cmake = { version = "0.1" }

dotenv = { version = "0.15" }

# hyperprocessor bridge
pallet-ismp = { version = "15.0.0", default-features = false }
pallet-ismp-runtime-api = { version = "15.0.0", default-features = false }
pallet-hyperbridge = { version = "15.0.0", default-features = false }
pallet-token-gateway = { version = "15.1.1", default-features = false }
pallet-ismp-rpc = { version = "15.0.0", default-features = false }
ismp-grandpa = { version = "15.0.0", default-features = false }
ismp = { version = "0.2.2", default-features = false }
sp-mmr-primitives = { version = "34.0.0", default-features = false }

ethers = { version = "2.0.14" }
uniswap-sdk-core = { version = "3.2.0" }
uniswap-v3-sdk = { version = "2.6.0" }
uniswap-lens = { version = "0.7.0" }
alloy-primitives = { version = "0.8.11", default-features = false }
alloy-sol-types = { version = "0.8.11", default-features = false }
alloy-sol-macro = { version = "0.8.11", default-features = false }
alloy-provider = { version = "0.6.4" }
alloy-transport = { version = "0.6.4" }
alloy-transport-http = { version = "0.6.4" }
alloy-eips = { version = "0.6.4" }

# releases are using old versions of jsonrpsee
subxt = { git = "https://github.com/paritytech/subxt", rev = "50fc73a2a5563e1b051b4a738c42a3319f79ac26" }

argon-testing = { path = "testing" }
argon-localchain = { path = "localchain" }
argon-client = { path = "client" }
argon-node-consensus = { path = "node/consensus" }
argon-bitcoin = { path = "bitcoin", default-features = false }
argon-bitcoin-utxo-tracker = { path = "node/bitcoin_utxo_tracker" }
argon-node = { path = "node" }
argon-runtime = { path = "runtime/argon", default-features = false }
argon-canary-runtime = { path = "runtime/canary", default-features = false }
argon-randomx = { path = "node/randomx" }
argon-notary = { path = "notary" }
argon-notary-apis = { path = "notary/apis" }
argon-notary-audit = { path = "notary/audit", default-features = false }
argon-primitives = { path = "primitives", default-features = false }
argon-bitcoin-cli-macros = { path = "bitcoin/cli/macros" }

pallet-block-seal = { path = "pallets/block_seal", default-features = false }
pallet-block-seal-spec = { path = "pallets/block_seal_spec", default-features = false }
pallet-bitcoin-utxos = { path = "pallets/bitcoin_utxos", default-features = false }
pallet-block-rewards = { path = "pallets/block_rewards", default-features = false }
pallet-bond = { path = "pallets/bond", default-features = false }
pallet-chain-transfer = { path = "pallets/chain_transfer", default-features = false }
pallet-digests = { path = "pallets/digests", default-features = false }
pallet-domains = { path = "pallets/domains", default-features = false }
pallet-mining-slot = { path = "pallets/mining_slot", default-features = false }
pallet-notebook = { path = "pallets/notebook", default-features = false }
pallet-notaries = { path = "pallets/notaries", default-features = false }
pallet-ticks = { path = "pallets/ticks", default-features = false }
pallet-mint = { path = "pallets/mint", default-features = false }
pallet-price-index = { path = "pallets/price_index", default-features = false }
pallet-vaults = { path = "pallets/vaults", default-features = false }
